Disable spring banner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8000
+spring.main.banner-mode=off
+# Thymeleaf templates are not applied unless you restart the application.
+# Disable it  during development
+spring.thymeleaf.cache=false
