--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,5 @@ dependencies {
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
+	testCompile("org.seleniumhq.selenium:selenium-java:2.45.0")
 }
